修改etcd的host配置

--- a/conf/config.json
+++ b/conf/config.json
@@ -1,9 +1,9 @@
 {
   "app":{
-    "host": ["127.0.0.1:9099"]
+    "host": "127.0.0.1:9099"
   },
   "etcd": {
-    "host": "http://127.0.0.1:2379"
+    "host": ["http://127.0.0.1:2379"]
   },
   "type": ["order", "user", "kill"],
   "auth": {
