--- a/conf/config.json
+++ b/conf/config.json
@@ -1,17 +1,23 @@
 {
-  "app":{
+  "app": {
     "host": "127.0.0.1:9099"
   },
   "etcd": {
-    "host": ["http://127.0.0.1:2379"]
+    "host": [
+      "http://127.0.0.1:2379"
+    ]
   },
-  "type": ["order", "user", "kill"],
+  "type": [
+    "order",
+    "user",
+    "kill"
+  ],
   "auth": {
     "user": "admin",
     "pass": "admin",
-    "enable": false
+    "enable": true
   },
-  "node_manager":{
+  "node_manager": {
     "host": "127.0.0.1:9199"
   },
   "batch": 100
